--- a/SmartTechShopManagement/Properties/Resources.resx
+++ b/SmartTechShopManagement/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="adminIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\adminIcon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="add customer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add customer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="computer icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\computer icon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -145,11 +148,20 @@
   <data name="bc56f3856f7cc17e6c151f358d35acd0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bc56f3856f7cc17e6c151f358d35acd0.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="stockmanagerIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stockmanagerIcon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="istockphoto-1165294902-612x612" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\istockphoto-1165294902-612x612.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="cart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cart.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="product-manager-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\product-manager-icon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="customer small" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\customer small.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="salesManIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\salesManIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -181,6 +193,9 @@
   <data name="financial-portfolio-icon-with-graph-vector1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\financial-portfolio-icon-with-graph-vector1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Customer icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Customer icon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="customerHistoryIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\customerHistoryIcon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -189,6 +204,9 @@
   </data>
   <data name="multiply logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\multiply logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Search" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Search.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="pngtree-computer-icon-vector-png-image_6698791" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pngtree-computer-icon-vector-png-image_6698791.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -202,7 +220,7 @@
   <data name="159604" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\159604.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="stockmanagerIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\stockmanagerIcon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Confirm perchase" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Confirm perchase.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
